5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4370/executions/1577_996.log
== TEST (2019-03-14 19:05:57) 
-- CODE:
print(" ***** ")
print("* 0 0  *)
print("*  ^   *)
print("* ---  *
print(" *****
-- ERROR:
File "XXXX", line 2
    print("* 0 0  *)
                   ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:06:04) 
-- CODE:
print(" ***** ")
print("* 0 0  *)
print("*  ^   *)
print("* ---  *
print(" *****
-- EXECUTION TIME:
0.147941
-- ERROR:
  File "/home/codebench/codes/1577/996/main.py", line 2
    print("* 0 0  *)
                   ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:07:10) 
-- CODE:
print(" ***** ")
print("* 0 0  *")
print("*  ^   *)
print("* ---  *
print(" *****
-- ERROR:
File "XXXX", line 3
    print("*  ^   *)
                   ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:09:04) 
-- CODE:
print(" ***** ")
print("* 0 0  *)
print("*  ^   *)
print("* ---  *
print(" *****
-- EXECUTION TIME:
0.218018
-- ERROR:
  File "/home/codebench/codes/1577/996/main.py", line 2
    print("* 0 0  *)
                   ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:09:21) 
-- CODE:
print(" ***** ")
print("* 0 0  *)
print("*  ^   *)
print("* ---  *)
print(" *****  )
		
-- EXECUTION TIME:
0.18697
-- ERROR:
  File "/home/codebench/codes/1577/996/main.py", line 2
    print("* 0 0  *)
                   ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:10:03) 
-- CODE:
print(" ***** ")
print("* 0 0  *")
print("*  ^   *")
print("* ---  *")
print(" *****  ")
		
-- EXECUTION TIME:
0.175367
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
* 0 0  *
*  ^   *
* ---  *
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:10:05) 
-- CODE:
print(" ***** ")
print("* 0 0  *")
print("*  ^   *")
print("* ---  *")
print(" *****  ")
		
-- OUTPUT:
***** 
* 0 0  *
*  ^   *
* ---  *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:12:22) 
-- CODE:
print(" ***** ")
print("* o o  *)
print("*  ^   *"
print("* ---  *"
print(" *****  "
		
-- EXECUTION TIME:
0.223887
-- ERROR:
  File "/home/codebench/codes/1577/996/main.py", line 2
    print("* o o  *)
                   ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:14:17) 
-- CODE:
print(" ***** ")
print("( o o  *)
print("*  ^   *"
print("* ---  *"
print(" *****  "
		
-- EXECUTION TIME:
0.209282
-- ERROR:
  File "/home/codebench/codes/1577/996/main.py", line 2
    print("( o o  *)
                   ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:16:40) 
-- CODE:
print("   ***** ")
print("(*  0 0  *)
print("")
print(" ")
print(" ")
-- ERROR:
File "XXXX", line 2
    print("(*  0 0  *)
                     ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:24:19) 
-- CODE:
print("   ***** ")
print("(*  o o *)")
print("*    ^   *)
print("*   ---  *")
print("   ***** ")
-- EXECUTION TIME:
0.147649
-- ERROR:
  File "/home/codebench/codes/1577/996/main.py", line 3
    print("*    ^   *)
                     ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:25:16) 
-- CODE:
print("   ***** ")
print("(*  o o   *)")
print(" *    ^   *)
print(" *   ---  *")
print("   ***** ")
-- EXECUTION TIME:
0.204717
-- ERROR:
  File "/home/codebench/codes/1577/996/main.py", line 3
    print(" *    ^   *)
                      ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:25:58) 
-- CODE:
print("   ***** " )
print("(*  o o  *)")
print(" *   ^   *)
print(" *   --- *")
print("    ***** ")
-- EXECUTION TIME:
0.159621
-- ERROR:
  File "/home/codebench/codes/1577/996/main.py", line 3
    print(" *   ^   *)
                     ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:26:48) 
-- CODE:
print("   ***** " )
print("(*  o o *)")
print(" *   ^  *)
print(" *  --- *")
print("   ***** ")"
-- ERROR:
File "XXXX", line 3
    print(" *   ^  *)
                    ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:26:52) 
-- CODE:
print("   ***** " )
print("(*  o o *)")
print(" *   ^  *)
print(" *  --- *")
print("   ***** ")"
-- EXECUTION TIME:
0.20381
-- ERROR:
  File "/home/codebench/codes/1577/996/main.py", line 3
    print(" *   ^  *)
                    ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:27:33) 
-- CODE:
print("   ***** " )
print("(*  o o *)")
print(" *   ^  *)
print(" *  --- *")
print("   ***** ")"
-- EXECUTION TIME:
0.154996
-- ERROR:
  File "/home/codebench/codes/1577/996/main.py", line 3
    print(" *   ^  *)
                    ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:27:38) 
-- CODE:
print("   ***** " )
print("(*  o o *)")
print(" *   ^  *)
print(" *  --- *")
print("   ***** ")"
-- EXECUTION TIME:
0.209737
-- ERROR:
  File "/home/codebench/codes/1577/996/main.py", line 3
    print(" *   ^  *)
                    ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:28:21) 
-- CODE:
print("  ***** " )
print("(* o o *)")
print(" *  ^  *)
print(" * --- *")
print("  ***** ")"
-- EXECUTION TIME:
0.21149
-- ERROR:
  File "/home/codebench/codes/1577/996/main.py", line 3
    print(" *  ^  *)
                   ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:28:23) 
-- CODE:
print("  ***** " )
print("(* o o *)")
print(" *  ^  *)
print(" * --- *")
print("  ***** ")"
-- ERROR:
File "XXXX", line 3
    print(" *  ^  *)
                   ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:28:43) 
-- CODE:
print("  ***** " )
print("(* o o *")")
print(" *  ^  *")
print(" * --- *")
print("  ***** ")"
-- EXECUTION TIME:
0.180196
-- ERROR:
  File "/home/codebench/codes/1577/996/main.py", line 2
    print("(* o o *")")
                      ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:28:45) 
-- CODE:
print("  ***** " )
print("(* o o *")")
print(" *  ^  *")
print(" * --- *")
print("  ***** ")"
-- ERROR:
File "XXXX", line 2
    print("(* o o *")")
                      ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:29:00) 
-- CODE:
print("  ***** ")
print("(* o o *")
print(" *  ^  *")
print(" * --- *")
print("  ***** ")"
-- EXECUTION TIME:
0.139935
-- ERROR:
  File "/home/codebench/codes/1577/996/main.py", line 5
    print("  ***** ")"
                     ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:30:02) 
-- CODE:
print("  ***** ")
print("(* o o *")
print(" *  ^  *")
print(" * --- *")
print("  ***** ")
-- OUTPUT:
***** 
(* o o *
 *  ^  *
 * --- *
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:30:06) 
-- CODE:
print("  ***** ")
print("(* o o *")
print(" *  ^  *")
print(" * --- *")
print("  ***** ")
-- EXECUTION TIME:
0.216772
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
(* o o *
 *  ^  *
 * --- *
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:31:24) 
-- CODE:
print("  ***** ")
print("(* o o *)")
print(" *  ^  *")
print(" * --- *")
print("  *****  ")
-- OUTPUT:
***** 
(* o o *)
 *  ^  *
 * --- *
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:31:33) 
-- CODE:
print("  ***** ")
print("(* o o *)"
print(" *  ^  *")
print(" * --- *")
print("  *****  ")
-- ERROR:
File "XXXX", line 3
    print(" *  ^  *")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:32:31) 
-- CODE:
print("  ***** ")
print("(* o o *)"
print(" *  ^  *")
print(" * --- *")
print("  *****  ")
-- ERROR:
File "XXXX", line 3
    print(" *  ^  *")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:32:34) 
-- CODE:
print("  ***** ")
print("(* o o *)"
print(" *  ^  *")
print(" * --- *")
print("  *****  ")
-- EXECUTION TIME:
0.244256
-- ERROR:
  File "/home/codebench/codes/1577/996/main.py", line 3
    print(" *  ^  *")
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:33:01) 
-- CODE:
print(" ***** ")
print("(* o o *)")
print(" *  ^  *")
print(" * --- *")
print("  *****  ")
-- OUTPUT:
***** 
(* o o *)
 *  ^  *
 * --- *
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:33:06) 
-- CODE:
print(" ***** ")
print("(* o o *)")
print(" *  ^  *")
print(" * --- *")
print("  *****  ")
-- OUTPUT:
***** 
(* o o *)
 *  ^  *
 * --- *
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:33:10) 
-- CODE:
print(" ***** ")
print("(* o o *)")
print(" *  ^  *")
print(" * --- *")
print("  *****  ")
-- EXECUTION TIME:
0.142852
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
(* o o *)
 *  ^  *
 * --- *
  *****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 08:49:43) 
-- CODE:
print(" ***** ")
print("* o o *")
print("*  ^  *")
print("* --- *")
print(" ***** ")

-- OUTPUT:
***** 
* o o *
*  ^  *
* --- *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 08:49:52) 
-- CODE:
print(" ***** ")
print("* o o *")
print("*  ^  *")
print("* --- *")
print(" ***** ")

-- EXECUTION TIME:
0.151352
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
* o o *
*  ^  *
* --- *
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 08:49:53) 
-- CODE:
print(" ***** ")
print("* o o *")
print("*  ^  *")
print("* --- *")
print(" ***** ")

-- EXECUTION TIME:
0.206643
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
* o o *
*  ^  *
* --- *
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 08:49:55) 
-- CODE:
print(" ***** ")
print("* o o *")
print("*  ^  *")
print("* --- *")
print(" ***** ")

-- EXECUTION TIME:
0.205879
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
* o o *
*  ^  *
* --- *
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:11:02) 
-- CODE:
print(" ***** ")
print("* o o *")
print("*  ^  *")
print("* --- *")
print(" ***** ")

-- EXECUTION TIME:
0.206766
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
* o o *
*  ^  *
* --- *
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:11:02) 
-- CODE:
print(" ***** ")
print("* o o *")
print("*  ^  *")
print("* --- *")
print(" ***** ")

-- EXECUTION TIME:
0.211412
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
* o o *
*  ^  *
* --- *
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:12:03) 
-- CODE:
print(" ***** ")
print("* o o *")
print("*  ^  *")
print("* --- *")
print(" ***** ")

-- OUTPUT:
***** 
* o o *
*  ^  *
* --- *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:12:05) 
-- CODE:
print(" ***** ")
print("* o o *")
print("*  ^  *")
print("* --- *")
print(" ***** ")

-- EXECUTION TIME:
0.176236
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
* o o *
*  ^  *
* --- *
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:12:17) 
-- CODE:
print(" ***** ")
print("* o o *")
print("*  ^  *")
print("* --- *")
print(" ***** ")

-- EXECUTION TIME:
0.185905
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
* o o *
*  ^  *
* --- *
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:12:33) 
-- CODE:
print(" ***** ")
print("* o o *")
print("*  ^  *")
print("* --- *")
print(" ***** ")

-- EXECUTION TIME:
0.179063
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
* o o *
*  ^  *
* --- *
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:15:34) 
-- CODE:
print(" ***** ")
print("(* o o *)")
print("*  ^  *")
print("* --- *")
print(" ***** ")

-- EXECUTION TIME:
0.157531
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
(* o o *)
*  ^  *
* --- *
 *****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:21:01) 
-- CODE:
print(" ***** ")
print("* o o *")
print("*  ^  *")
print("* --- *")
print(" ***** ")

-- EXECUTION TIME:
0.152557
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
* o o *
*  ^  *
* --- *
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:35:31) 
-- CODE:
print(" ***** ")
print("(* o o *)")
print("*  ^  *")
print("* --- *")
print(" ***** ")

-- EXECUTION TIME:
0.220442
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
(* o o *)
*  ^  *
* --- *
 *****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
